--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://base44.com/logo_v2.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lysaght One - Version 2 (Preview)</title>
+    <title>Lysaght One - Version 2 (Preview) - Updated</title>
   </head>
   <body>
     <div id="root"></div>
